<resources>
    <string name="app_name">Applic </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_new_survey">New Survey</string>
    <string name="title_home">Home</string>
    <string name="rb_yes">Yes</string>
    <string name="rb_No">No</string>
    <string name="rb_dnt">Donnot Know</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="default_p">#</string>
    <string name="default_guest_name">Name</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="txt_header_text">txt_header_text</string>
    <string name="txt_rb">txt_rb</string>
    <string name="rb_text">rb_text</string>
    <string name="txt_cb">txt_rb</string>
    <string name="cb_text">cb_text</string>
    <string name="ed_text">ed_text</string>
    <string name="cmb_text">cmb_text</string>
    <string name="date_text">date_text</string>
    <string name="txt_Q1101">Is this an area of high HIV/AIDS prevalence?</string>
    <string name="txt_Q1102">Is this a region of high malaria prevalence?</string>
    <string name="txt_Q1103">During which season did the child/she/he die?</string>
    <string name="txt_Q1202">Name of the deceased (if known)</string>
    <string name="txt_Q1203">Sex of deceased</string>
    <string name="txt_Q1204">Date of birth of the deceased</string>
    <string name="txt_Q1205">Date of death of the deceased</string>
    <string name="txt_Q1206">Last known age of the deceased</string>
    <string name="txt_Q1207">Was this a stillbirth or neonatal death? </string>
    <string name="txt_Q1208">Name of mother</string>
    <string name="txt_Q1209">Name of father or household head</string>
    <string name="txt_Q1301">Language of the interview</string>
    <string name="txt_Q1302">Interviewer ID number</string>
    <string name="txt_Q1307">Date interview started</string>
    <string name="txt_Q1308">Time interview started</string>
    <string name="txt_Q1309">Date interview finished</string>
    <string name="txt_Q1310">Time interview finished</string>
    <string name="txt_Q1312">Date form checked by supervisor </string>
    <string name="txt_Q1313">Date entered in computer</string>
    <string name="txt_Q1405">Did respondent give consent?</string>
    <string name="txt_Q1401">What is the respondent’s name?</string>
    <string name="txt_Q1402">Record the sex of the respondent.</string>
    <string name="txt_Q1403"> What is the respondent’s relationship to the deceased?</string>
    <string name="txt_Q1404">Did the respondent live with the deceased in the period leading to her/his death?</string>
    <string name="txt_Q1406">How old are you?</string>
    <string name="txt_Q1407">Have you ever attended school?</string>
    <string name="txt_Q1408">What is the highest level of school you attended?</string>
    <string name="txt_Q1409">What is the highest [GRADE/ YEAR] you completed at that level?</string>
    <string name="txt_Q1410">Now I would like you to read this sentence to me. (Show card to respondent)</string>
    <string name="txt_Q1411">How many people live at (this / that) household?</string>
    <string name="txt_Q1412">How many rooms are used for sleeping in the household?</string>
    <string name="txt_Q1413">Does the household have a separate room for cooking?</string>
    <string name="txt_Q1414">Does the household have:</string>
    <string name="txt_Q1415">What is the main source of drinking water in this household?</string>
    <string name="txt_Q1416">What type of toilet do members of the household usually use?</string>
    <string name="txt_Q1417">What is the main source of energy or fuel the household uses for cooking?</string>
    <string name="txt_Q1418">What is the main source of energy the household uses for lighting?</string>
    <string name="txt_Q1419">What is the main material used for the floor of the house?</string>
    <string name="txt_Q1420">What is the main material used for the roof of the house?</string>
    <string name="txt_Q1421">What is the main material used for the exterior walls of the house?</string>
    <string name="txt_Q1501">Are there other people present during the interview?</string>
    <string name="txt_Q1502"> In addition to the respondent, how many people are present during the interview? (Please do not include the respondent in the count)</string>
    <string name="txt_Q1503">What is each other person’s relationship to the deceased person?</string>
    <string name="txt_Q1601">What was the sex of the deceased?</string>
    <string name="txt_Q1602">Is the date of birth known?</string>
    <string name="txt_Q1603">When was the deceased born?</string>
    <string name="txt_Q1604">Where did the deceased die?</string>
    <string name="txt_Q1605">Is the date of death known?</string>
    <string name="txt_Q1606">What was the date of death?</string>
    <string name="txt_Q1607">CALCULATE THE AGE AT DEATH</string>
    <string name="txt_Q1608">How old was the deceased at the time of death?</string>
    <string name="txt_Q1609">Mark the deceased’s age group at the time of death.</string>
    <string name="txt_Q1610">If less than 28 days old at death, record the age in days, hours or minutes:</string>
    <string name="rb_Q1101_1"> High</string>
    <string name="rb_Q1101_2">Low</string>
    <string name="rb_Q1101_3"> Very low</string>
    <string name="rb_Q1102_1">High</string>
    <string name="rb_Q1102_2">Low</string>
    <string name="rb_Q1102_3">   Very low</string>
    <string name="rb_Q1103_1"> Wet</string>
    <string name="rb_Q1103_2">   Dry</string>
    <string name="rb_Q1103_3">DK</string>
    <string name="rb_Q1203_1"> Male</string>
    <string name="rb_Q1203_2">   Female</string>
    <string name="rb_Q1207_1">Stillbirth</string>
    <string name="rb_Q1207_2">Neonatal death</string>
    <string name="rb_Q1207_9">Not known from the record</string>
    <string name="rb_Q1405_1">Yes</string>
    <string name="rb_Q1405_2">No</string>
    <string name="rb_Q1402_1"> Male</string>
    <string name="rb_Q1402_2"> Female</string>
    <string name="rb_Q1402_DK">Don’t know</string>
    <string name="rb_Q1403_1">Spouse</string>
    <string name="rb_Q1403_2">Mother</string>
    <string name="rb_Q1403_3">Father</string>
    <string name="rb_Q1403_4">Grandmother</string>
    <string name="rb_Q1403_5"> Grandfather</string>
    <string name="rb_Q1403_6">   Son</string>
    <string name="rb_Q1403_7">   Daughter</string>
    <string name="rb_Q1403_8">Aunt</string>
    <string name="rb_Q1403_9">Uncle</string>
    <string name="rb_Q1403_10"> Brother</string>
    <string name="rb_Q1403_11">Sister</string>
    <string name="rb_Q1403_12">Birth attendant (specify type) </string>
    <string name="rb_Q1403_OTM"> Other male (specify) </string>
    <string name="rb_Q1403_OTF"> Other female (specify) </string>
    <string name="rb_Q1404_1">Yes</string>
    <string name="rb_Q1404_2">   No</string>
    <string name="rb_Q1404_DK"> Don’t know</string>
    <string name="rb_Q1407_1">Yes</string>
    <string name="rb_Q1407_2"> No</string>
    <string name="rb_Q1407_DK"> Don’t know</string>
    <string name="rb_Q1408_1">   Primary </string>
    <string name="rb_Q1408_2">   Secondary </string>
    <string name="rb_Q1408_3"> Higher than secondary</string>
    <string name="rb_Q1408_DK"> Don’t know</string>
    <string name="rb_Q1410_1">Unable to read anything</string>
    <string name="rb_Q1410_2">   Can only read parts of the statement </string>
    <string name="rb_Q1410_3"> Can read the entire statement </string>
    <string name="rb_Q1410_4">No statement in the language requested (Specify the language)</string>
    <string name="rb_Q1410_5"> Blind/mute, problems with vision/speech</string>
    <string name="rb_Q1413_1"> Yes</string>
    <string name="rb_Q1413_2">No</string>
    <string name="rb_Q1413_DK">  Don’t know</string>
    <string name="rb_Q1414_1"> electricity</string>
    <string name="rb_Q1414_2">radio</string>
    <string name="rb_Q1414_3">television</string>
    <string name="rb_Q1414_4">refrigerator</string>
    <string name="rb_Q1414_5">   fixed line telephone</string>
    <string name="rb_Q1414_6">   mobile telephone</string>
    <string name="rb_Q1414_7">computer</string>
    <string name="rb_Q1414_8">   bicycle</string>
    <string name="rb_Q1414_9">   motorcycle or scooter</string>
    <string name="rb_Q1414_10"> car or truck</string>
    <string name="rb_Q1415_1">Piped water inside the house</string>
    <string name="rb_Q1415_2">Piped water outside the house/yard</string>
    <string name="rb_Q1415_3">   Piped water in the neighbor’s house</string>
    <string name="rb_Q1415_4">Public tap/standpipe?</string>
    <string name="rb_Q1415_5">   Borehole/protected well with manual pump?</string>
    <string name="rb_Q1415_6">Protected well without manual pump</string>
    <string name="rb_Q1415_7"> Unprotected well?</string>
    <string name="rb_Q1415_8">Spring water?</string>
    <string name="rb_Q1415_9">Surface water (river, lake, ponds)?</string>
    <string name="rb_Q1415_10">Rainwater?</string>
    <string name="rb_Q1415_11">Tanker truck / loaded on drums?</string>
    <string name="rb_Q1415_12"> Bottled water?</string>
    <string name="rb_Q1415_DK">Don’t know</string>
    <string name="rb_Q1416_1"> Flush toilet inside the house?</string>
    <string name="rb_Q1416_2">Flush toilet outside the house?</string>
    <string name="rb_Q1416_3">Toilet without flushing</string>
    <string name="rb_Q1416_4">Improved latrine</string>
    <string name="rb_Q1416_5">Improved traditional latrine</string>
    <string name="rb_Q1416_6">   Unimproved latrine</string>
    <string name="rb_Q1416_7">   No latrine/toilet</string>
    <string name="rb_Q1416_OT">Other (specify) </string>
    <string name="rb_Q1416_DK">  Don’t know</string>
    <string name="rb_Q1417_1"> Electricity</string>
    <string name="rb_Q1417_2">   Natural gas</string>
    <string name="rb_Q1417_3">Petrol/paraffin/kerosene</string>
    <string name="rb_Q1417_4">Mineral coal</string>
    <string name="rb_Q1417_5">   Charcoal</string>
    <string name="rb_Q1417_6"> Firewood</string>
    <string name="rb_Q1417_7">   Animal dung</string>
    <string name="rb_Q1417_8">No food cooked in the household</string>
    <string name="rb_Q1417_OT">Other (specify) </string>
    <string name="rb_Q1417_DK"> Don’t know</string>
    <string name="rb_Q1418_1"> Electricity</string>
    <string name="rb_Q1418_2">   Generator / Solar </string>
    <string name="rb_Q1503_1"> Spouse </string>
    <string name="rb_Q1503_2"> Mother </string>
    <string name="rb_Q1503_3">Father </string>
    <string name="rb_Q1503_4">   Grandmother </string>
    <string name="rb_Q1503_5">Grandfather </string>
    <string name="rb_Q1503_6">Son </string>
    <string name="rb_Q1503_7">   Daughter </string>
    <string name="rb_Q1503_8"> Aunt </string>
    <string name="rb_Q1503_9">Uncle </string>
    <string name="rb_Q1503_10"> Brother </string>
    <string name="rb_Q1503_11"> Sister </string>
    <string name="rb_Q1503_12"> Birth attendant (specify type) </string>
    <string name="rb_Q1503_OTM"> Other male (specify) </string>
    <string name="rb_Q1503_OTF"> Other female (specify) </string>
</resources>