<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="90"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                style="@style/Q_Linerlayout_v"

                android:layout_marginBottom="60dp"
                >

                <!-- Radio Buttons Q1503 Starts -->
                  <android.support.v7.widget.CardView style="@style/Q_CardView">


                      <LinearLayout
                          android:id="@+id/ll_Q1503"
                          style="@style/Q_Linerlayout_v">


                          <TextView
                              android:id="@+id/txt_Q1503_header"
                              style="@style/TextView"
                              android:text="@string/txt_Q1503"/>
                          <TextView
                              android:id="@+id/txt_Q1503"
                              style="@style/TextView"
                              android:text="@string/txt_Q1503" />

                          <RadioGroup style="@style/RadioGroup">

                              <RadioButton
                                  android:id="@+id/rb_Q1503_1"
                                  style="@style/RadioButton"
                                  android:text="@string/rb_Q1503_1" />

                              <RadioButton
                                  android:id="@+id/rb_Q1503_2"
                                  style="@style/RadioButton"
                                  android:text="@string/rb_Q1503_2" />

                              <RadioButton
                                  android:id="@+id/rb_Q1503_3"
                                  style="@style/RadioButton"
                                  android:text="@string/rb_Q1503_3" />

                              <RadioButton
                                  android:id="@+id/rb_Q1503_4"
                                  style="@style/RadioButton"
                                  android:text="@string/rb_Q1503_4" />

                              <RadioButton
                                  android:id="@+id/rb_Q1503_5"
                                  style="@style/RadioButton"
                                  android:text="@string/rb_Q1503_5" />

                              <RadioButton
                                  android:id="@+id/rb_Q1503_6"
                                  style="@style/RadioButton"
                                  android:text="@string/rb_Q1503_6" />

                              <RadioButton
                                  android:id="@+id/rb_Q1503_7"
                                  style="@style/RadioButton"
                                  android:text="@string/rb_Q1503_7" />

                              <RadioButton
                                  android:id="@+id/rb_Q1503_8"
                                  style="@style/RadioButton"
                                  android:text="@string/rb_Q1503_8" />

                              <RadioButton
                                  android:id="@+id/rb_Q1503_9"
                                  style="@style/RadioButton"
                                  android:text="@string/rb_Q1503_9" />

                              <RadioButton
                                  android:id="@+id/rb_Q1503_10"
                                  style="@style/RadioButton"
                                  android:text="@string/rb_Q1503_10" />

                              <RadioButton
                                  android:id="@+id/rb_Q1503_11"
                                  style="@style/RadioButton"
                                  android:text="@string/rb_Q1503_11" />

                              <RadioButton
                                  android:id="@+id/rb_Q1503_12"
                                  style="@style/RadioButton"
                                  android:text="@string/rb_Q1503_12" />

                              <RadioButton
                                  android:id="@+id/rb_Q1503_13"
                                  style="@style/RadioButton"
                                  android:text="@string/rb_Q1503_OTM" />

                              <RadioButton
                                  android:id="@+id/rb_Q1503_14"
                                  style="@style/RadioButton"
                                  android:text="@string/rb_Q1503_OTF" />

                          </RadioGroup>

                      </LinearLayout>

                  </android.support.v7.widget.CardView>
                  <!--  Buttons Q1503 Ends -->

                <!--Q1503_OT Edit text Starts -->
                <android.support.v7.widget.CardView style="@style/Q_CardView">

                    <LinearLayout
                        android:id="@+id/ll_Q1503_OT"
                        style="@style/Q_Linerlayout_v">

                        <EditText
                            android:id="@+id/ed_Q1503_OT"
                            style="@style/EditText_varchar"
                            android:hint="@string/explain" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>
                <!--Q1503_OT Edit text Ends-->




            </LinearLayout>


        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_weight="10"
        android:orientation="horizontal"

        android:weightSum="1"
        >

        <Button
            android:id="@+id/btn_add"
            style="@style/Button_collder"

            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:text="Add Relation"

            android:textSize="14sp"

            />

    </LinearLayout>
</LinearLayout>