<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:background="#EEEEEE"
    android:orientation="vertical">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="5dp"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:scrollbarSize="50dip">
        <!-- Parent layout starts -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F1F1F1"
            android:orientation="vertical">




            <!-- Header Text Starts -->
            <android.support.v7.widget.CardView style="@style/Q_CardView"

                >


                <LinearLayout

                    style="@style/Q_Linerlayout_v"
                    android:id="@+id/ll_header"


                    >

                    <TextView


                        style="@style/TextView"
                        android:text="@string/txt_header_text"
                        android:textStyle="bold"
                        android:textColor="@color/black_overlay"
                        />





                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!-- Header Text Ends-->




            <!-- Radio Button Starts -->
            <android.support.v7.widget.CardView style="@style/Q_CardView"

                >


                <LinearLayout

                    style="@style/Q_Linerlayout_v"

                    android:id="@+id/ll_rb"
                    >

                    <TextView


                        style="@style/TextView"
                        android:text="@string/txt_rb"

                        />


                    <RadioGroup style="@style/RadioGroup"

                        >

                        <RadioButton

                            style="@style/RadioButton"
                            android:text="@string/rb_text"
                            android:id="@+id/rb_rb"
                            />



                    </RadioGroup>




                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!-- Radio Button Ends-->



            <!-- ChecBox starts   -->
            <android.support.v7.widget.CardView style="@style/Q_CardView">



                <LinearLayout
                    android:id="@+id/ll_cb"
                    style="@style/Q_Linerlayout_v"

                    >

                    <TextView
                        android:id="@+id/txt_cb"
                        style="@style/TextView"
                        android:text="@string/txt_cb"

                        />


                    <CheckBox
                        android:id="@+id/C_A13_1"
                        style="@style/CheckBox"
                        android:text="@string/cb_text" />


                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!-- CheckBox Ends -->

            <!-- EditTextView STARTS-->
            <android.support.v7.widget.CardView style="@style/Q_CardView"

                >


                <LinearLayout

                    style="@style/Q_Linerlayout_v"
                    android:id="@+id/ll_ed"
                    >

                    <TextView


                        style="@style/TextView"
                        android:text="@string/ed_text"

                        />

                    <EditText
                        android:id="@+id/txt_Q2"
                        style="@style/EditText_varchar"
                        android:hint="@string/ed_text"

                        />


                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!-- EditTextView Ends-->

            <!-- ComboBox starts -->
            <android.support.v7.widget.CardView style="@style/Q_CardView"

                android:layout_marginTop="20dp"
                >



                <LinearLayout
                    android:id="@+id/lb_cmb"
                    style="@style/Q_Linerlayout_v"

                    >

                    <TextView

                        style="@style/TextView"
                        android:text="@string/cmb_text"

                        />



                        <Spinner
                            style="@style/Combox"
                            android:id="@+id/cmb_cmb"
                            >


                        </Spinner>



                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!-- ComboBox ends-->



            <!-- Date STARTS-->
            <android.support.v7.widget.CardView style="@style/Q_CardView"

                >


                <LinearLayout

                    style="@style/Q_Linerlayout_v"
                    android:id="@+id/ll_date"
                    >

                    <TextView


                        style="@style/TextView"
                        android:text="@string/date_text"

                        />

                    <Button
                        android:id="@+id/btn_date"
                        style="@style/Button_date"
                        android:layout_margin="10dp"


                        android:text="@string/date_text" />


                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!-- Date Ends-->



            <!-- Button Next Starts-->
            <android.support.v7.widget.CardView
                style="@style/Q_CardView"
                >

                <Button
                    android:id="@+id/Button_Next_D"
                    style="@style/Button_Next"
                    android:layout_margin="10dp"


                    android:text="Next " />
            </android.support.v7.widget.CardView>

            <!-- Button Next Ends-->


        </LinearLayout>

    </ScrollView>


</LinearLayout>
